# emacs-theme-generator

./: .gitignore  README.md  emacs-theme-generator.cabal  install.sh  theme.el
.stack-work/install/x86_64-osx/lts-3.12/7.10.2/flag-cache/: emacs-theme-generator-0.1.0.0-9c94ed3eeeb3820d3cbfbe1fe9b60973
.stack-work/install/x86_64-osx/lts-3.12/7.10.2/lib/x86_64-osx-ghc-7.10.2/emacs-theme-generator-0.1.0.0-L13ERIXmNDbKFGNBBjFJoE/Text/Emacs/: Theme.dyn_hi  Theme.hi
.stack-work/install/x86_64-osx/lts-3.12/7.10.2/pkgdb/: emacs-theme-generator-0.1.0.0-d3ec5b4b8d4760426bda626dc784e450.conf  package.cache
app/: Main.hs
resources/templates/: theme.txt
resources/themes/: brin.json  dark.json  dorsey.json  empty.json  graham.json  shadow.json  slime.json
src/Text/Emacs/: Theme.hs
