name:                emacs-theme-generator
version:             0.1.0.0
synopsis:            Emacs theme generator
description:         Please see README.md
homepage:            http://github.com/owainlewis/emacs-theme-generator#readme
license:             BSD3
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
copyright:           2016 Owain Lewis
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Emacs.Theme
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       aeson,
                       text,
                       regex-compat,
                       bytestring 
  default-language:    Haskell2010

executable emacs-theme-generator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , emacs-theme-generator
  default-language:    Haskell2010

test-suite emacs-theme-generator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , emacs-theme-generator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/owainlewis/emacs-theme-generator
